HTML Pokemon now displayed ON WEBPAGE
This now has a list of Pokemon displayed on webpage

--- a/Poke'mon App/index.html
+++ b/Poke'mon App/index.html
@@ -11,6 +11,10 @@
     <h1>Poke'mon Deck</h1>
     <div class="container">
       <ul class="pokemon-list">
+        <li class="Bulbasaur">
+        <li class="Squirtle">
+        <li class="Pidgey">
+        <li class="Butterfree">
       </ul>
     </div>
     <script src="js/script.js"></script>
