--- a/Poke'mon App/index.html
+++ b/Poke'mon App/index.html
@@ -10,11 +10,19 @@
   <body>
     <h1>Poke'mon Deck</h1>
     <div class="container">
-      <ul class="pokemon-list">
-        <li class="Bulbasaur">
-        <li class="Squirtle">
-        <li class="Pidgey">
-        <li class="Butterfree">
+      <ul class='pokemon-list'>
+        <li> 
+          <button>"Bulbasaur"</button>
+        </li>
+        <li> 
+          <button>"Squirtle"</button>
+        </li>
+        <li> 
+          <button>"Pidgey"</button>
+        </li>
+        <li> 
+          <button>"Butterfree"</button>
+        </li>
       </ul>
     </div>
     <script src="js/script.js"></script>
