--- a/Poke'mon App/index.html
+++ b/Poke'mon App/index.html
@@ -12,16 +12,16 @@
     <div class="container">
       <ul class='pokemon-list'>
         <li> 
-          <button>"Bulbasaur"</button>
+          <button class="card">"Bulbasaur"</button>
         </li>
         <li> 
-          <button>"Squirtle"</button>
+          <button class="card">"Squirtle"</button>
         </li>
         <li> 
-          <button>"Pidgey"</button>
+          <button class="card">"Pidgey"</button>
         </li>
         <li> 
-          <button>"Butterfree"</button>
+          <button class="card">"Butterfree"</button>
         </li>
       </ul>
     </div>
