--- a/Poke'mon App/index.html
+++ b/Poke'mon App/index.html
@@ -12,16 +12,16 @@
     <div class="container">
       <ul class='pokemon-list'>
         <li> 
-          <button class="card">"Bulbasaur"</button>
+          <button class="card">Bulbasaur</button>
         </li>
         <li> 
-          <button class="card">"Squirtle"</button>
+          <button class="card">Squirtle</button>
         </li>
         <li> 
-          <button class="card">"Pidgey"</button>
+          <button class="card">Pidgey</button>
         </li>
         <li> 
-          <button class="card">"Butterfree"</button>
+          <button class="card">Butterfree</button>
         </li>
       </ul>
     </div>
