--- a/Poke'mon App/index.html
+++ b/Poke'mon App/index.html
@@ -6,10 +6,11 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css" > 
   </head>
     <title>Poke'mon Deck</title>
- 
   <body>
     <h1>Poke'mon Deck</h1>
     <div class="container">
+      <ul class='pokemon-list'></ul>
+      
     </div>
     <script src="js/script.js"></script>
   </body>
