--- a/Poke'mon App/index.html
+++ b/Poke'mon App/index.html
@@ -10,8 +10,20 @@
     <h1>Poke'mon Deck</h1>
     <div class="container">
       <ul class='pokemon-list'></ul>
-      
-    </div>
+        <li>
+          <button>Bulbasaur</button>
+        </li>
+        <li>
+          <button>Squirtle</button>
+        </li>
+        <li>
+          <button>Pidgey</button>
+        </li>
+        <li>
+          <button>Butterfree</button>
+       </li>
+      </ul>
+   </div>
     <script src="js/script.js"></script>
   </body>
 </html>
