--- a/Poke'mon App/index.html
+++ b/Poke'mon App/index.html
@@ -11,5 +11,7 @@
   <div class="container">
       <ul class='pokemon-list'></ul>
   </div>
+    <script src="js/promise-polyfill.js"></script>
+    <script src="js/fetch-polyfill.js"></script>
     <script src="js/script.js"></script>
 </html>
