--- a/Poke'mon App/index.html
+++ b/Poke'mon App/index.html
@@ -5,7 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/styles.css" > 
   </head>
-
+  <body>
+    <button id='show-modal'>Show modal</button>
+    <div id='modal-container'>
+    </div>
     <title>Poke'mon Deck</title>
     <h1>Poke'mon Deck</h1>
   <div class="container">
