--- a/Poke'mon App/index.html
+++ b/Poke'mon App/index.html
@@ -12,7 +12,7 @@
   <div class="container">
         <ul class='pokemon-list'></ul>
           <div id='modal-container'></div>
-            <button li class='button_style'id='show-modal'></button>
+<!--             <button li class='button_style'id='show-modal'></button> -->
   </div>
     <script src="js/script.js"></script>
 </html>
