--- a/Poke'mon App/index.html
+++ b/Poke'mon App/index.html
@@ -9,10 +9,9 @@
     
     <title>Poke'mon Deck</title>
     <h1>Poke'mon Deck</h1>
-  <div class="container">
-        <ul class='pokemon-list'></ul>
-          <div id='modal-container'></div>
-<!--             <button li class='button_style'id='show-modal'></button> -->
-  </div>
+      <div class ="container" id='modal-container'>
+        <ul class='pokemon-list'></ul> 
+          <button li class='button_style'id='show-modal'></button>
+      </div>
     <script src="js/script.js"></script>
 </html>
