--- a/Poke'mon App/index.html
+++ b/Poke'mon App/index.html
@@ -9,9 +9,9 @@
     
     <title>Poke'mon Deck</title>
     <h1>Poke'mon Deck</h1>
-      <div class ="container" id='modal-container'>
+      <div class ="container" id='modal-container'></div>
         <ul class='pokemon-list'></ul> 
           <button li class='button_style'id='show-modal'></button>
-      </div>
+   
     <script src="js/script.js"></script>
 </html>
