--- a/JS-main/Poke'mon App/index.html
+++ b/JS-main/Poke'mon App/index.html
@@ -9,7 +9,8 @@
     
     <title>Poke'mon Deck</title>
     <h1>Poke'mon Deck</h1>
-      <div class ="container" id='modal-container'></div>
+      <div class ="container" id='modal-container'>
         <ul class='pokemon-list'></ul> 
+        </div>
     <script src="js/script.js"></script>
 </html>
