--- a/Poke'mon App/index.html
+++ b/Poke'mon App/index.html
@@ -5,11 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="css/styles.css" > 
   </head>
-
+  <body>
+    <button id='show-modal'>Show modal</button>
+    <div id='modal-container'>
+      <div class='modal'> 
+        <button class='modal-close'>Close</button>
+        <h1>Modal title</h1>
+        <p>Modal text</p>       
+      </div>
+    </div>
+    <script src="js/script.js"></script>
+  </body>
     <title>Poke'mon Deck</title>
     <h1>Poke'mon Deck</h1>
   <div class="container">
       <ul class='pokemon-list'></ul>
   </div>
-    <script src="js/script.js"></script>
+   
 </html>
