test with commented out html

--- a/Poke'mon App/index.html
+++ b/Poke'mon App/index.html
@@ -11,7 +11,7 @@
       <div class="container">
         <ul class='pokemon-list'></ul>
       </div>
-      <body>
+      <!-- <body>
         <div id='modal-container'>
           <div class='modal'> 
             <button class='modal-close'>Close</button>
@@ -19,6 +19,6 @@
             <p>Modal text</p>       
           </div>
         </div>
-      </body>
+      </body> -->
     <script src="js/script.js"></script>
 </html>
