--- a/Poke'mon App/index.html
+++ b/Poke'mon App/index.html
@@ -8,17 +8,8 @@
 
     <title>Poke'mon Deck</title>
     <h1>Poke'mon Deck</h1>
-  <div class="container">
-      <ul class='pokemon-list'></ul>
+  <div class="container" id="modal-container">
+      <ul class='pokemon-list' ></ul>
   </div>
     <script src="js/script.js"></script>
-  </html>
-  <!-- <body>
-    <div id='modal-container'>
-      <div class='modal'> 
-        <button class='modal-close'>Close</button>
-        <h1>Modal title</h1>
-        <p>Modal text</p>       
-      </div>
-    </div>
-  </body> -->
+</html>
