--- a/Poke'mon App/index.html
+++ b/Poke'mon App/index.html
@@ -9,7 +9,7 @@
     <title>Poke'mon Deck</title>
     <h1>Poke'mon Deck</h1>
   <div class="container">
-      <ul class='pokemon-list'></ul>
+      <ul class='pokemon-list' id='modal-container'></ul>
   </div>
     <script src="js/script.js"></script>
 </html>
