--- a/Poke'mon App/index.html
+++ b/Poke'mon App/index.html
@@ -8,7 +8,7 @@
 
     <title>Poke'mon Deck</title>
     <h1>Poke'mon Deck</h1>
-  <div class="container" id="modal-container">
+  <div class="container">
       <ul class='pokemon-list'></ul>
   </div>
     <script src="js/script.js"></script>
