--- a/Pokemon_1.7/Poke'mon App/index.html
+++ b/Pokemon_1.7/Poke'mon App/index.html
@@ -1,15 +1,19 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="css/styles.css" > 
-  </head>
-
-    <title>Poke'mon Deck</title>
-    <h1>Poke'mon Deck</h1>
-  <div class="modal-container">
-      <ul class='pokemon-list'></ul>
-  </div>
-    <script src="js/script.js"></script>
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width" />
+        <title>Simple JS App</title>
+        <link rel="stylesheet" type="text/css" href="css/styles.css" />
+    </head>
+    <body>
+        <h1>Pokédex</h1>
+        <ul class="pokemon-list"></ul>
+        <div id="modal-container"></div>
+        <button id="show-modal"></button>
+        <strong>
+            <script src="js/promise-polyfill.js"></script>
+            <script src="js/fetch-polyfill.js"></script>
+            <script src="js/scripts.js"></script>
+        </strong>
+    </body>
 </html>
