--- a/Pokemon_1.7/Poke'mon App/index.html
+++ b/Pokemon_1.7/Poke'mon App/index.html
@@ -11,7 +11,7 @@
         <div id="modal-container"></div>
         <button id="show-modal"></button>
         <strong>
-            <script src="js/scripts.js"></script>
+            <script src="js/script.js"></script>
         </strong>
     </body>
 </html>
