--- a/Poke'mon App/index.html
+++ b/Poke'mon App/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Pokédex</h1>
-        <ul class="pokemon-list"></ul>
+        <ul class="list-group"></ul>
         <div id="modal-container"></div>
         <button id="show-modal"></button>
         <strong>
