--- a/Pokemon-Bootstrap/Poke'mon App/index.html
+++ b/Pokemon-Bootstrap/Poke'mon App/index.html
@@ -9,9 +9,11 @@
     <body>
         <h1>Pokédex</h1>
 
-        <ul class="pokemon-list container"></ul>
+        <ul class="pokemon-list container">
+
+        </ul>
         <div id="modal-container"></div>
-        <button id="show-modal"></button>
+        <button class="row column" id="show-modal"></button>
         <strong>
             <script src="js/script.js"></script>
             <script
