--- a/Pokemon-Bootstrap/Poke'mon App/index.html
+++ b/Pokemon-Bootstrap/Poke'mon App/index.html
@@ -12,7 +12,7 @@
         <ul class="pokemon-list container">
 
         </ul>
-        <div class="container" id="modal-container"></div>
+        <div class="container-fluid" id="modal-container"></div>
         <button class="row column" id="show-modal"></button>
         <strong>
             <script src="js/script.js"></script>
