--- a/Pokemon-Bootstrap/Poke'mon App/index.html
+++ b/Pokemon-Bootstrap/Poke'mon App/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1>Pokédex</h1>
 
-        <ul class="pokemon-list container">
+        <ul class="pokemon-list container-fluid">
 
         </ul>
         <div class="container-fluid" id="modal-container"></div>
