--- a/Pokemon-Bootstrap/Poke'mon App/index.html
+++ b/Pokemon-Bootstrap/Poke'mon App/index.html
@@ -50,7 +50,7 @@
         </strong>
     
     <!-- Button trigger modal -->
-	<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+	<button type="button" class="btn-primary row column" id="show-modal" data-toggle="modal" data-target="#exampleModal">
         Launch demo modal
     </button>
 
@@ -59,17 +59,13 @@
       <div class="modal-dialog" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <h5 class="modal-title" id="exampleModalLabel">Pokemon Card Details</h5>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
-          <div class="modal-body">
-            ...
-          </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <button type="button" class="btn-secondary" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
