--- a/Pokemon-Bootstrap/Poke'mon App/index.html
+++ b/Pokemon-Bootstrap/Poke'mon App/index.html
@@ -32,9 +32,10 @@
 </nav>
 <h1>Pokédex</h1>
 
-   <ul class="pokemon-list container-fluid"></ul>
-        <div class="container-fluid" id="modal-container"></div>
+   <ul class="pokemon-list"></ul>
+        <div id="modal-container"></div>
         <button class="row column" id="show-modal"></button>
+
     <!-- Button trigger modal -->
 	<button type="button" class="btn-primary row column" id="show-modal" data-toggle="modal" data-target="#exampleModal">
         Launch demo modal
