--- a/Pokemon-Bootstrap/Poke'mon App/index.html
+++ b/Pokemon-Bootstrap/Poke'mon App/index.html
@@ -32,14 +32,11 @@
 </nav>
 <h1>Pokédex</h1>
 
-   <ul class="pokemon-list"></ul>
-        <div id="modal-container"></div>
-        <button class="row column" id="show-modal"></button>
+   <ul class="pokemon-list container"></ul>
+        <div class="container" id="modal-container"></div>
 
     <!-- Button trigger modal -->
-	<button type="button" class="btn-primary row column" id="show-modal" data-toggle="modal" data-target="#exampleModal">
-        Launch demo modal
-    </button>
+	<button type="button" class="btn-primary row column" id="show-modal" data-toggle="modal" data-target="#show-modal"></button>
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
