--- a/Pokemon-Bootstrap/Poke'mon App/index.html
+++ b/Pokemon-Bootstrap/Poke'mon App/index.html
@@ -32,11 +32,11 @@
 </nav>
 <h1>Pokédex</h1>
 
-   <ul class="pokemon-list container"></ul>
+   <ul class="pokemon-list"></ul>
         <div class="container" id="modal-container"></div>
 
     <!-- Button trigger modal -->
-	<button type="button" class="btn-primary row column" id="show-modal" data-toggle="modal" data-target="#show-modal"></button>
+	    <button type="button" class="btn-primary" id="show-modal" data-toggle="modal" data-target="#show-modal"></button>
 
     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
