--- a/Pokemon-Bootstrap/Poke'mon App/index.html
+++ b/Pokemon-Bootstrap/Poke'mon App/index.html
@@ -1,4 +1,4 @@
-<html>
+<html class="container-fluid">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
