--- a/Pokemon-Bootstrap/Poke'mon App/index.html
+++ b/Pokemon-Bootstrap/Poke'mon App/index.html
@@ -30,14 +30,14 @@
     </nav>
     <h1>Pokédex</h1>
 
-      <ul class="pokemon-list"></ul>
+      <ul class="pokemon-list container"></ul>
             <div class="container" id="modal-container"></div>
 
         <!-- Button trigger modal -->
           <button type="button" class="btn-primary" id="show-modal" data-toggle="modal" data-target="#show-modal"></button>
 
         <!-- Modal -->
-        <div class="modal fade" id="show-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade container" id="show-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
