--- a/Pokemon-Bootstrap/Poke'mon App/index.html
+++ b/Pokemon-Bootstrap/Poke'mon App/index.html
@@ -30,7 +30,7 @@
     </nav>
     <h1>Pokédex</h1>
 
-      <ul class="pokemon-list container"></ul>
+      <ul class="pokemon-list"></ul>
             <div class="container" id="modal-container"></div>
 
         <!-- Button trigger modal -->
