--- a/Pokemon-Bootstrap/Poke'mon App/index.html
+++ b/Pokemon-Bootstrap/Poke'mon App/index.html
@@ -34,7 +34,7 @@
             <div class="container" id="modal-container"></div>
 
         <!-- Button trigger modal -->
-          <button type="button" class="btn-primary" id="show-modal" data-toggle="modal" data-target="#show-modal"></button>
+          <button type="button" class="btn-primary" data-toggle="modal" data-target="#show-modal"></button>
 
         <!-- Modal -->
         <div class="modal fade container" id="show-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
