--- a/Pokemon-Bootstrap/Poke'mon App/index.html
+++ b/Pokemon-Bootstrap/Poke'mon App/index.html
@@ -9,7 +9,7 @@
     </head>
 
     <body class="container">
-      <nav class="container navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Navbar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
