--- a/Pokemon-Bootstrap/Poke'mon App/index.html
+++ b/Pokemon-Bootstrap/Poke'mon App/index.html
@@ -17,7 +17,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Features</a>
@@ -31,13 +31,8 @@
     <h1>Pokédex</h1>
 
       <ul class="pokemon-list"></ul>
-            <div class="container" id="modal-container"></div>
-
-        <!-- Button trigger modal -->
-          <button type="button" class="btn-primary" data-toggle="modal" data-target="#show-modal"></button>
-
-        <!-- Modal -->
-        <div class="modal fade container" id="show-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+         <!-- Modal -->
+         <div class="modal fade container" id="show-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
@@ -52,6 +47,10 @@
             </div>
           </div>
         </div>
+          
+        <!-- Button trigger modal -->
+          <button type="button" class="btn-primary" data-toggle="modal" data-target="#show-modal"></button>
+
         <script
         src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
