--- a/Pokemon-Bootstrap/Poke'mon App/index.html
+++ b/Pokemon-Bootstrap/Poke'mon App/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
-        <title>Simple JS App</title>
+        <title>Pokédex/title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
         <link rel="stylesheet" type="text/css" href="css/styles.css" />
         
@@ -16,13 +16,13 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item active">
+          <li class="list-group-item nav-item active">
             <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+          <li class="list-group-item nav-item">
             <a class="nav-link" href="#">Features</a>
           </li>
-          <li class="nav-item">
+          <li class="list-group-item nav-item">
             <a class="nav-link" href="#">Pricing</a>
           </li>
         </ul>
@@ -30,19 +30,19 @@
     </nav>
     <h1>Pokédex</h1>
 
-      <ul class="pokemon-list"></ul>
+      <ul class="list-group"></ul>
          <!-- Modal -->
-         <div class="modal fade container" id="show-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+         <div class="modal fade container" id="modal-container" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
             <div class="modal-content">
               <div class="modal-header">
-                <h5 class="modal-title" id="show-modal">Pokemon Card Details</h5>
+                <h5 class="modal-title" >Pokemon Card Details</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                   <span aria-hidden="true">&times;</span>
                 </button>
               </div>
               <div class="modal-footer">
-                <button type="button" class="btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" data-target="#show-modal" class="btn-secondary" data-dismiss="modal">Close</button>
               </div>
             </div>
           </div>
