--- a/Pokemon-Bootstrap/Poke'mon App/index.html
+++ b/Pokemon-Bootstrap/Poke'mon App/index.html
@@ -30,7 +30,7 @@
     </nav>
     <h1>Pokédex</h1>
 
-      <ul class="pokemon-list"></ul>
+      <ul class="list-group"></ul>
          <!-- Modal -->
          <div class="modal fade container" id="show-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
@@ -47,9 +47,6 @@
             </div>
           </div>
         </div>
-          
-        <!-- Button trigger modal -->
-          <button type="button" class="btn-primary" data-toggle="modal" data-target="#show-modal"></button>
 
         <script
         src="https://code.jquery.com/jquery-3.3.1.min.js"
