--- a/Pokemon-Bootstrap/Poke'mon App/index.html
+++ b/Pokemon-Bootstrap/Poke'mon App/index.html
@@ -30,7 +30,7 @@
     </nav>
     <h1>Pokédex</h1>
 
-      <ul class="list-group row col-6 col-md-4"></ul>
+      <ul class="list-group"></ul>
          <!-- Modal -->
          <div class="modal fade container" id="show-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
           <div class="modal-dialog" role="document">
