--- a/Pokemon Bootstrap/Poke'mon App/index.html
+++ b/Pokemon Bootstrap/Poke'mon App/index.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <h1>Pokédex</h1>
-        <ul class="pokemon-list"></ul>
-        <div id="modal-container"></div>
+        <ul class="pokemon-list listed-group"></ul>
+        <div class"container"id="modal-container"></div>
         <button id="show-modal"></button>
         <strong>
             <script src="js/script.js"></script>
