--- a/Pokemon Bootstrap/Poke'mon App/index.html
+++ b/Pokemon Bootstrap/Poke'mon App/index.html
@@ -1,4 +1,4 @@
-<html>
+<html class="container-fluid">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
@@ -9,7 +9,7 @@
     <body>
         <h1>Pokédex</h1>
         <ul class="pokemon-list"></ul>
-        <div class="container" id="modal-container"></div>
+        <div class="container-fluid" id="modal-container"></div>
         <button id="show-modal"></button>
         <strong>
             <script src="js/script.js"></script>
