update to append child issue

--- a/Pokemon-main 14/Poke'mon App/index.html
+++ b/Pokemon-main 14/Poke'mon App/index.html
@@ -31,7 +31,7 @@
     <body>
         <h1>Pokédex</h1>
         <div class="container">
-            <ul class="pokemon-cards list-group row"> </ul>
+            <ul class="pokemon-cards"> </ul>
         </div>
         
         <!-- Modal -->
