--- a/Pokemon Bootstrap/Poke'mon App/index.html
+++ b/Pokemon Bootstrap/Poke'mon App/index.html
@@ -1,4 +1,4 @@
-<html>
+<html class="container">
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Pokédex</h1>
-        <ul class="pokemon-list"></ul>
+        <ul class="container pokemon-list"></ul>
         <div id="modal-container"></div>
         <button id="show-modal"></button>
         <strong>
