--- a/Pokemon Bootstrap/Poke'mon App/index.html
+++ b/Pokemon Bootstrap/Poke'mon App/index.html
@@ -13,7 +13,7 @@
         <button type="button" data-toggle="modal" data-target="#exampleModal" id="show-modal"></button>
 
         <!-- Modal -->
-        <div class="modal fade" id="modal-container" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal fade" id="show-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
