--- a/Pokemon Bootstrap/Poke'mon App/index.html
+++ b/Pokemon Bootstrap/Poke'mon App/index.html
@@ -10,8 +10,6 @@
         <h1>Pokédex</h1>
         <ul class="pokemon-list"></ul>
 
-        <button type="button" data-toggle="modal" data-target="#showModal"></button>
-
         <!-- Modal -->
         <div class="modal fade" id="showModal" tabindex="-1" role="dialog" aria-labelledby="showModallLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
@@ -26,7 +24,7 @@
                 ...
                 </div>
                 <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn-secondary" data-dismiss="modal">Close</button>
                 </div>
             </div>
             </div>
