--- a/Pokemon Bootstrap/Poke'mon App/index.html
+++ b/Pokemon Bootstrap/Poke'mon App/index.html
@@ -24,7 +24,7 @@
                 ...
                 </div>
                 <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn-secondary" data-dismiss="modal">Close</button>
                 <button type="button" class="btn-primary">Save changes</button>
                 </div>
             </div>
