--- a/Pokemon Bootstrap/Poke'mon App/index.html
+++ b/Pokemon Bootstrap/Poke'mon App/index.html
@@ -10,26 +10,25 @@
         <h1>Pokédex</h1>
         <ul class="pokemon-list"></ul>
         
-        <!-- Modal -->
-        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal" tabindex="-1" role="dialog">
             <div class="modal-dialog" role="document">
-            <div class="modal-content">
+              <div class="modal-content">
                 <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel"></h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                  <h5 class="modal-title">Modal title</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
-                </button>
+                  </button>
                 </div>
                 <div class="modal-body">
-                <p></p>
+                  <p>Modal body text goes here.</p>
                 </div>
                 <div class="modal-footer">
-                <button type="button" class="btn-secondary" data-dismiss="modal">Close</button>
-                <button type="button" class="btn-primary">Save changes</button>
+                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
                 </div>
+              </div>
             </div>
-            </div>
-        </div>
+          </div>
     
 
         <strong>
