--- a/Pokemon Bootstrap/Poke'mon App/index.html
+++ b/Pokemon Bootstrap/Poke'mon App/index.html
@@ -18,7 +18,7 @@
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pokemon Decks for Sale/a>
+                        <a class="nav-link" href="#">Pokemon Decks for Sale</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Pokemon Video Games</a>
