--- a/Pokemon Bootstrap/Poke'mon App/index.html
+++ b/Pokemon Bootstrap/Poke'mon App/index.html
@@ -33,7 +33,7 @@
         <ul class="pokemon-list"></ul>
 
         	<!-- Button trigger modal -->
-	    <button type="button" class="btn-primary" data-toggle="modal" data-target="#exampleModal">
+	    <button type="button" class="card-btn" data-toggle="modal" data-target="#exampleModal">
         Launch demo modal
       </button>
 
