--- a/Pokemon Bootstrap/Poke'mon App/index.html
+++ b/Pokemon Bootstrap/Poke'mon App/index.html
@@ -18,13 +18,13 @@
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pokemon Decks for Sale</a>
+                        <a class="nav-link" href="#">Pokemon Decks</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Pokemon Video Games</a>
+                        <a class="nav-link" href="#">Pokemon Video-Games</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                        <a class="nav-link" href="#">Pokemon TV & Movies</a>
                     </li>
                 </ul>
             </div>
