add links to tabs

--- a/Pokemon Bootstrap/Poke'mon App/index.html
+++ b/Pokemon Bootstrap/Poke'mon App/index.html
@@ -18,13 +18,13 @@
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Poke'mon Decks</a>
+                        <a class="nav-link" href="https://www.pokemon.com/us/pokedex">Poke'mon Decks</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Poke'mon Video-Games</a>
+                        <a class="nav-link" href="https://www.pokemon.com/us/pokemon-video-games/all-pokemon-games/">Poke'mon Video-Games</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Poke'mon TV & Movies</a>
+                        <a class="nav-link" href="https://www.pokemon.com/us/pokemon-episodes/pokemon-movies/">Poke'mon TV & Movies</a>
                     </li>
                 </ul>
             </div>
